--- a/src/layout/Conteiner.module.css
+++ b/src/layout/Conteiner.module.css
@@ -1,9 +1,14 @@
 .Conteiner{
     width: 1200px;
     flex-wrap: wrap;
+    height: 1200px;
+    
 }
 .min_altura{
-    margin-top: 40px;
-    min-height: 450px;
+   
+    min-height: 600px;
     
+}
+.funcionario{
+    height: 450;
 }
