feito resposividade na pagina telaFrequetandor

--- a/src/layout/Conteiner.module.css
+++ b/src/layout/Conteiner.module.css
@@ -6,9 +6,9 @@
 }
 .min_altura{
    
-    min-height: 600px;
+    min-height: 700px;
     
 }
 .funcionario{
-    height: 450;
+    height: 450px;
 }
